syntax = "proto3";

package geoippb.v1;

option go_package = "wz2100.net/microlobby/service/geoip/v1/proto/geoippb;geoippb";

service GeoIPV1Service {
    rpc Country(IpRequest) returns (CountryResponse) {}
    rpc City(IpRequest) returns (CityResponse) {}
}

message IpRequest {
    string ip = 1;
    repeated string languages = 2; // Optional
    string commaLanguages = 3; // Optional for url requests
}

message CountryResponse {
    string isoCode = 1;
    map<string,string> countryName = 2;
}

message CityResponse {
    string isoCode = 1;
    string timeZone = 2;
    map<string,string> cityName = 3;
    map<string,string> countryName = 4;
    double latitude = 5;
    double longitude = 6;
}